--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,11 @@
         <%= render partial: "shared/navbar" %>
       <% end %>
       <div class="px-3 lg:px-0 h-full">
-        <% if current_user.blank? %>
+        <% if current_user.blank? || current_account_user.admin? %>
         <% else %>
           <% if current_account_user.interpreter? %>
             <%= render partial: 'shared/interpreter_sidenav' %>
           <% elsif !current_account_user.interpreter? %>
-            <%= render partial: 'shared/sidenav' %>
-          <% elsif current_user.admin? %>
             <%= render partial: 'shared/sidenav' %>
           <% end %>
         <% end %>
