--- a/app/views/agencies/_agency_list.html.erb
+++ b/app/views/agencies/_agency_list.html.erb
@@ -4,9 +4,14 @@
     <%= agency.agency_detail.primary_contact_email %>
   </td>
   <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-    <a href="#" class="text-indigo-600 hover:text-indigo-900">View<span class="sr-only"></a>
+    <%= link_to agency_path(agency), class: "text-indigo-600 hover:text-indigo-900" do %>
+      View<span class="sr-only">
+    <% end %>
+    <a href="#" class="text-indigo-600 hover:text-indigo-900"></a>
   </td>
   <td class="relative whitespace-nowrap py-4 pl-3 pr-4 text-right text-sm font-medium sm:pr-6">
-    <a href="#" class="text-indigo-600 hover:text-indigo-900">Edit<span class="sr-only"></a>
+    <%= link_to edit_agency_path(agency), class: "text-indigo-600 hover:text-indigo-900" do %>
+      Edit<span class="sr-only">
+    <% end %>
   </td>
 </tr>
