--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -27,13 +27,13 @@
               <div class="px-4 sm:px-6 lg:px-8">
                 <div class="mt-8 flow-root">
                   <div class="-my-2 -mx-4 overflow-x-auto sm:-mx-6 lg:-mx-8">
-                    <div class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8">
+                    <div class="inline-block min-w-full py-2 align-middle sm:px-4">
                       <div class="overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:rounded-lg">
                         <table class="min-w-full divide-y divide-gray-300">
                           <thead class="bg-gray-50">
                             <tr>
-                              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6">Name</th>
-                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900">Primary Contact</th>
+                              <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-6"><%= sortable @sites, :name, "Name" %></th>
+                              <th scope="col" class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"><%= sortable @sites, :primary_contact_email, "Primary Contact" %></th>
                               <th scope="col" class="relative py-3.5 pl-3 pr-4 sm:pr-6">
                                 <span class="sr-only">View</span>
                               </th>
