--- a/app/views/agencies/new.html.erb
+++ b/app/views/agencies/new.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :title, t("shared.scaffold.new.title", model: "Agency") %>
-<div class="flex flex-1 flex-col md:pl-64">
+<div class="flex flex-1 flex-col">
 	<main class="flex-1">
 	  <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
