--- a/app/views/dashboard/agency.html.erb
+++ b/app/views/dashboard/agency.html.erb
@@ -49,7 +49,7 @@
                       <dl>
                         <dt class="truncate text-sm font-medium text-gray-500">Created Appointments</dt>
                         <dd>
-                          <div class="text-lg font-medium text-gray-900">30</div>
+                          <div class="text-lg font-medium text-gray-900"><%= @appointments.count %></div>
                         </dd>
                       </dl>
                     </div>
@@ -76,7 +76,7 @@
                       <dl>
                         <dt class="truncate text-sm font-medium text-gray-500">Appointments Scheduled</dt>
                         <dd>
-                          <div class="text-lg font-medium text-gray-900">20</div>
+                          <div class="text-lg font-medium text-gray-900"><%= @appointments.count %></div>
                         </dd>
                       </dl>
                     </div>
@@ -103,7 +103,7 @@
                       <dl>
                         <dt class="truncate text-sm font-medium text-gray-500">Appointments Completed</dt>
                         <dd>
-                          <div class="text-lg font-medium text-gray-900">30</div>
+                          <div class="text-lg font-medium text-gray-900"><%= @appointments.count %></div>
                         </dd>
                       </dl>
                     </div>
@@ -120,12 +120,12 @@
             </div>
           </div>
 
-          <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Apointments</h2>
+          <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Appointment List</h2>
 
           <!-- Activity list (smallest breakpoint only) -->
           <div class="shadow sm:hidden">
             <ul role="list" class="mt-2 divide-y divide-gray-200 overflow-hidden shadow sm:hidden">
-              <% current_account.appointments.each do |appoinment| %>
+              <% @appointments.each do |appoinment| %>
                 <li>
                   <a href="#" class="block bg-white px-4 py-4 hover:bg-gray-50">
                     <span class="flex items-center space-x-4">
@@ -168,58 +168,43 @@
                   <table class="min-w-full divide-y divide-gray-200">
                     <thead>
                       <tr>
-                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col">Recent Appointment List</th>
-                        <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Amount</th>
+                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Ref Numb" %></th>
+                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Customer Name" %></th>
                         <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
                         <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
                       </tr>
                     </thead>
                     <tbody class="divide-y divide-gray-200 bg-white">
-                      <tr class="bg-white">
-                        <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
-                          <div class="flex">
-                            <a href="#" class="group inline-flex space-x-2 truncate text-sm">
-                              <!-- Heroicon name: mini/banknotes -->
-                              <svg class="h-5 w-5 flex-shrink-0 text-gray-400 group-hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                                <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
-                              </svg>
-                              <p class="truncate text-gray-500 group-hover:text-gray-900">Payment to Molly Sanders</p>
-                            </a>
-                          </div>
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
-                          <span class="font-medium text-gray-900">$20,000</span>
-                          USD
-                        </td>
-                        <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
-                          <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize">success</span>
-                        </td>
-                        <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
-                          <time datetime="2020-07-11">July 11, 2020</time>
-                        </td>
-                      </tr>
+                      <% @appointments.each do |appointment| %>
+                        <tr class="bg-white">
+                          <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                            <time datetime="2020-07-11"><%= appointment.ref_number %></time>
+                          </td>
+                          <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
+                            <div class="flex">
+                              <a href="#" class="group inline-flex space-x-2 truncate text-sm">
+                                <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
+                              </a>
+                            </div>
+                          </td>
+                          <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
+                            <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize">created</span>
+                          </td>
+                          <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                            <time datetime="2020-07-11"><%= appointment.start_time %></time>
+                          </td>
+                        </tr>
+                      <% end %>
 
                       <!-- More transactions... -->
                     </tbody>
                   </table>
                   <!-- Pagination -->
-                  <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3 sm:px-6" aria-label="Pagination">
-                    <div class="hidden sm:block">
-                      <p class="text-sm text-gray-700">
-                        Showing
-                        <span class="font-medium">1</span>
-                        to
-                        <span class="font-medium">10</span>
-                        of
-                        <span class="font-medium">20</span>
-                        results
-                      </p>
+                  <% if @pagy.pages > 1 %>
+                    <div class="my-6 text-center">
+                      <%== pagy_nav(@pagy) %>
                     </div>
-                    <div class="flex flex-1 justify-between sm:justify-end">
-                      <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">Previous</a>
-                      <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">Next</a>
-                    </div>
-                  </nav>
+                  <% end %>
                 </div>
               </div>
             </div>
