--- a/app/views/interpreters/_availability_form.html.erb
+++ b/app/views/interpreters/_availability_form.html.erb
@@ -1,49 +1,77 @@
-<div class="m-8">
-	<form class="w-full max-w-6xl">
-		<h4 class="mb-3">Add Availability:</h4>
-		<div class="flex flex-wrap mb-2">
-			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
-				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-					From:
-				</label>
-				<input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="start-time" type="time">
-			</div>
-			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
-				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-					From:
-				</label>
-				<input class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500" id="start-time" type="time">
-			</div>
-			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-					In-Person:
-				</label>
-				<div class="flex h-5 mt-5 items-center">
-					<input id="comments" aria-describedby="comments-description" name="comments" type="checkbox" class="inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-					<p class="ml-2"><i class="fa fa-person"></i></p>	
-				</div>
-			</div>
-			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-					Phone:
-				</label>
-				<div class="flex h-5 mt-5 items-center">
-					<input id="comments" aria-describedby="comments-description" name="comments" type="checkbox" class="inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-					<p class="ml-2"><i class="fa fa-phone"></i></p>	
-				</div>
-			</div>
-			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
-				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
-					Video Call:
-				</label>
-				<div class="flex h-5 mt-5 items-center">
-					<input id="comments" aria-describedby="comments-description" name="comments" type="checkbox" class="inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500">
-					<p class="ml-2"><i class="fa fa-video"></i></p>	
-				</div>
-			</div>
-			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0 mt-8">
-			 <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Add</button>
-			</div>
-		</div>
-	</form>
+<div id="<%= availability.id || "new_availability_#{availability.wday}" %>_form_wrapper" class="border rounded-3 border-coral border-2 mb-3 mt-3">
+
+  <%= form_with model: availability do |form| %>
+
+    <% if availability.new_record? %>
+      <%= form.hidden_field :interpreter_id %>
+    <% end %>
+
+    <%= form.hidden_field :wday %>
+
+    <% if @notice %>
+      <div class="alert alert-danger alert-dismissible" id="<%= if availability.new_record? then "new_availability_#{availability.wday}" else availability.id end %>_notice" >
+        <span class="alert-text">
+          <strong><%= @notice %></strong>
+        </span>
+      </div>
+    <% end %>
+
+    <div id="new_availability_<%= availability.wday %>_notice"></div>
+
+    <div class="m-8">
+  		<h4 class="mb-3">Add Availability:</h4>
+  		<div class="flex flex-wrap mb-2">
+  			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
+  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
+  					From:
+  				</label>
+
+          <div class="grid grid-cols-2 gap-4">
+            <div><%= select_hour availability.start_hour, { ampm: true, field_name: 'start[hour]', prefix: 'times' }, { id: dom_id(availability, 'times_start_hour'),  class: "form-select"}  %></div>
+            <div><%= select_tag 'times[start][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}, selected: lpad_number(availability.start_minute)), {id: dom_id(availability, 'times_start_minute'),  class: "form-select"} %></div>
+          </div>
+  			</div>
+  			<div class="w-1/3 md:w-1/3 px-3 mb-6 md:mb-0">
+  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="start-time">
+  					To:
+  				</label>
+
+          <div class="grid grid-cols-2 gap-4">
+            <div><%= select_hour availability.end_hour,{ ampm: true, field_name: 'finish[hour]', prefix: 'times' }, {id: dom_id(availability, 'times_end_hour'), class: "form-select"} %></div>
+            <div><%= select_tag 'times[finish][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}, selected: lpad_number(availability.end_minute)), { id: dom_id(availability, 'times_end_minute') , class: "form-select"} %></div>
+          </div>
+  			</div>
+  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
+  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_in_person">
+  					In-Person:
+  				</label>
+  				<div class="flex h-5 mt-5 items-center">
+            <%= form.check_box :in_person,  class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
+  					<p class="ml-2"><i class="fa fa-person"></i></p>
+  				</div>
+  			</div>
+  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
+  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_phone">
+  					Phone:
+  				</label>
+  				<div class="flex h-5 mt-5 items-center">
+            <%= form.check_box :phone, class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
+  					<p class="ml-2"><i class="fa fa-phone"></i></p>
+  				</div>
+  			</div>
+  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0">
+  				<label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="availability_video">
+  					Video Call:
+  				</label>
+  				<div class="flex h-5 mt-5 items-center">
+            <%= form.check_box :video, class: "inline-blockh-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500" %>
+  					<p class="ml-2"><i class="fa fa-video"></i></p>
+  				</div>
+  			</div>
+  			<div class="w-1/8 md:w-1/8 px-3 mb-6 md:mb-0 mt-8">
+  			 <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Add</button>
+  			</div>
+  		</div>
+    </div>
+  <% end %>
 </div>
