--- a/app/views/interpreters/availability.html.erb
+++ b/app/views/interpreters/availability.html.erb
@@ -1,78 +1,66 @@
+
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
-
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
         <div class="px-4 sm:px-6 lg:px-6">
           <div class="sm:flex sm:items-center pb-6">
-              <div class="sm:flex-auto"> 
-                <h1 class="text-xl font-semibold text-gray-900">
-                 <span class="text-tokanisecondary-500">
-                  <%= current_user.full_name %>
-                  </span>
-                  <span class="text-tokaniprimary-600 font-light mx-2">/Availability</span>    
-                </h1>
-              </div>      
+            <div class="sm:flex-auto">
+              <h1 class="text-xl font-semibold text-gray-900">
+               <span class="text-tokanisecondary-500">
+                <%= current_user.full_name %>
+                </span>
+                <span class="text-tokaniprimary-600 font-light mx-2">/Availability</span>
+              </h1>
             </div>
-        <div class="p-8 bg-white rounded shadow">
-        <div class="px-4 sm:px-6 lg:px-8 container">
+          </div>
 
-<div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
-  <ul class="list-reset list-none flex border-b">
-    <li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Sunday</a>
-    </li>
-    <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Monday</a>
-    </li>
-    <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Tuesday</a>
-    </li>
-		<li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Wednesday</a>
-    </li>
-    <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Thursday</a>
-    </li>
-    <li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Friday</a>
-    </li>
-		<li class="mr-1" data-tabs-target="tab" data-action="click->tabs#change">
-      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Saturday</a>
-    </li>
-  </ul>
+          <div class="p-8 bg-white rounded shadow">
+            <div class="px-4 sm:px-6 lg:px-8 container">
+              <div class="justify-center content-center mb-5">
+                <%= form_with url:  update_timezone_interpreter_path(@interpreter), method: :patch do |form| %>
+                  <div class="mb-3">
+                    <p id="timezone_notice"><%= flash[:timezone_notice] %></p>
+                  </div>
 
-  <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-		<%= render "availability_form" %>
-		<%= render "availability_table" %>
-  </div>
+                  <div class="grid grid-cols-2 gap-4 mb-3">
+                    <div>
+                      <%= form.label :my_timezone, "My Time Zone", class: 'text-blueCoral text-bolder text-lg'%>
+                      <%= form.select :timezone, options_from_collection_for_select(Account.available_timezones, :name, :name, @interpreter.time_zone), {}, {class: 'form-select' } %>
+                    </div>
+                    <div>
+                      <br>
+                      <div class="mt-3">
+                        <button type="submit" class="mt-3 inline-flex w-full items-center justify-center rounded-none border border-transparent bg-indigo-600 px-4 py-2 font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Update</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="">
+                    <div class="justify-center content-center">
+                      <p style="color: red;">**Warning! Changing your time zone will remove all of your availabilities!</p>
+                    </div>
+                  </div>
+                <% end %>
+              </div>
 
-  <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 2
-  </div>
+              <div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
+                <ul class="list-reset list-none flex border-b">
+                  <% @days.each_with_index do |day, index| %>
+                    <li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
+                      <a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#"><%= day %></a>
+                    </li>
+                  <% end %>
+                </ul>
 
-  <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 3
-  </div>
-
-	<div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 4
-  </div>
-
-	<div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 5
-  </div>
-
-	<div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 6
-  </div>
-
-	<div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
-    Tab panel 7
-  </div>
-</div>
-        </div>
-        </div>
+                <% @days.each_with_index do |day, index| %>
+                  <div class="hidden py-4 px-4 border-l border-b border-r" data-tabs-target="panel">
+                		<%= render partial: "availability_form", locals: {availability: Availability.new(interpreter_id: @interpreter.id, wday: index)} %>
+                		<%= render partial: "availability_table", locals: {index: index} %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
