--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :title, "Customers ##{@customer.id}" %>
 <%= turbo_stream_from @customer %>
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
