--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,6 +1,6 @@
 
 <%= content_for :title, t("shared.scaffold.new.title", model: "Customer") %>
-
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
