--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,25 +34,22 @@
         <%= render partial: "shared/navbar" %>
       <% end %>
       <div class="px-3 lg:px-0 h-full">
-        <% if current_user.blank? || current_account_user.admin? %>
-        <% else %>
+        <% unless current_user.blank? || current_account_user.admin? %>
           <% if current_account_user.interpreter? %>
             <%= render partial: 'shared/interpreter_sidenav' %>
-          <% elsif !current_account_user.interpreter? %>
+          <% elsif current_account_user.agency_admin? %>
             <%= render partial: 'shared/sidenav' %>
           <% end %>
         <% end %>
         <!-- <div class="p-8 bg-white rounded shadow"> -->
-          <div class="flex flex-1 flex-col">
-            <main class="flex-1">
-              <%= yield %>
-            </main>
-          </div>
+        <div class="flex flex-1 flex-col">
+          <main class="flex-1">
+            <%= yield %>
+          </main>
+        </div>
       </div>
     </div>
-
     <%= render partial: "shared/footer" unless turbo_native_app? %>
-
     <ninja-keys data-controller="command-palette" hideBreadcrumbs></ninja-keys>
   </body>
 </html>
