--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, "Sites ##{@site.id}" %>
 <%= turbo_stream_from @site %>
-
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
