adding in sidenav

--- a/app/views/agencies/account_invoices.html.erb
+++ b/app/views/agencies/account_invoices.html.erb
@@ -1,5 +1,6 @@
 <%= content_for :title, "Invoices" %>
 <%= turbo_stream_from :agencies %>
+<%= render partial: 'shared/sidenav' %>
 <div>
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
