--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, "Appointments" %>
 <%= turbo_stream_from :appointments %>
-
+<%= render partial: 'shared/sidenav' %>
 <div>
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
