--- a/app/views/recipients/index.html.erb
+++ b/app/views/recipients/index.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, "Recipients" %>
+<%= render partial: 'shared/sidenav' %>
 <div>
-  
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
       <div class="py-6">
