--- a/app/views/requestors/index.html.erb
+++ b/app/views/requestors/index.html.erb
@@ -1,6 +1,5 @@
-
+<%= render partial: 'shared/sidenav' %>
 <div>
-  
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
       <div class="py-6">
