--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream_from @provider %>
-
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
