--- a/app/views/recipients/new.html.erb
+++ b/app/views/recipients/new.html.erb
@@ -1,5 +1,5 @@
 <%= content_for :title, t("shared.scaffold.new.title", model: "Recipient") %>
-
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
