--- a/app/views/requestors/show.html.erb
+++ b/app/views/requestors/show.html.erb
@@ -1,6 +1,6 @@
 
 <%= turbo_stream_from @requestor %>
-
+<%= render partial: 'shared/sidenav' %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
